temporary change of index

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,7 +10,35 @@
   <div class="container">
     <div class="row mt-3">
       <div class="col mx-auto text-center mb-3">
-        <h4>Welcome to the best movie store!!</h4>
+        <p>Inspektorzy pracy będą mogli przekształcać kontrakty B2B w umowy o pracę. Ministerstwo Pracy właśnie wprowadziło kilka rewolucyjnych zmian do najnowszego projektu reformy. Chodzi m.in. o zaległe składki i podatki. Oto szczegóły.
+          Po głosach krytyki, zwłaszcza ze strony pracodawców, resort pracy postanowił poprawić kluczowe punkty reformy, w myśl której inspektorzy pracy będą mogli zamieniać zawarte umowy B2B (czyli umowy oparte o fakturę, najczęściej wystawianą przez jednoosobowe działalności gospodarcze) i umowy-zlecenia w umowy o pracę.</p> 
+        <p>- Zapewniam, że od zmian nie ma odwrotu. Reformę zapisano jako kamień milowy w Krajowym Planie Odbudowy (KPO) i na pewno ona wystartuje. Ale oczywiście jeszcze wypracujemy ostateczną koncepcję zmian i stąd nowe propozycje - mówi Wyborcza.biz  źródło związane z rządem. </p>
+        <p>Nasz informator zdradził nam najnowsze poprawki związane z reformą.</p>
+        <h4>Nowe zapisy</h4>
+        <p>
+          Największe kontrowersje wywoływał pomysł o konieczności odprowadzania zaległych danin. Otóż, jeśli inspektor stwierdzi, że ktoś powinien być zatrudniony na etacie, a pracował na B2B, będzie mógł się domagać odprowadzenia składek i podatków wstecz. W najnowszym pomyśle resortu pracy określono jednak, że zaległe daniny będą mogły być ściągane maksymalnie za trzy lata wstecz. 
+          Kolejna sprawa dotyczy tego, jakie konkretnie decyzje będzie mógł podejmować inspektor. 
+          Tak jak pisaliśmy już wcześniej w serwisie Wyborcza.biz, gdy inspektorzy wykryją nieprawidłowości, będą mogli wystąpić z powództwem do sądu - i to sąd będzie decydował, czy umowę trzeba przekształcić. To jednak nic nowego, takie prawo inspektorzy mają już dziś, ale sam resort pracy przyznaje, że nie spełnia ono swojej funkcji.
+          "Uprawnienie to jest rzadko wykorzystywane przez inspektorów pracy, z uwagi na czasochłonność prowadzenia procesu sądowego oraz ryzyko przegrania sprawy, zwłaszcza przy braku współpracy ze strony osoby wykonującej pracę (obawiającej się np. utraty pracy), a także przewlekłość postępowań sądowych i długie oczekiwanie na rozstrzygnięcie sprawy" - napisał resort w pierwszej wersji projektu reformy.
+          Co więc będzie nowego? Otóż inspektorzy będą mogli też wydać decyzję administracyjną o przekształceniu umowy. 
+          I wreszcie - i to ma być dopisane do najnowszego projektu - inspektor będzie mógł wydać tzw. polecenie przedsiębiorcy, aby kontrakt B2B, który zawarł z informatykiem czy projektantem, zamienił na umowę o pracę. 
+          Jakie zalety ma mieć takie polecenie w stosunku do decyzji administracyjnej czy przekazania sprawy do sądu? Otóż przedsiębiorca, który zastosuje się do polecenia, będzie zwolniony z płacenia danin i składek za wcześniejszy okres. Nowe, wyższe daniny będą musiały być naliczane dopiero od momentu zakończenia kontroli. Jest tylko jeden problem. To od inspektora będzie zależało, jaki rodzaj interwencji podejmie (decyzję, polecenie czy skierowanie sprawy do sądu).
+          - Taka uznaniowość, bez zapisania ostrych kryteriów, czym ma się kierować inspektor przy podejmowaniu decyzji, może być groźna i budzić obawy co do jasności prawa wśród kontrolowanych — mówi Łukasz Kozłowski, ekonomista Federacji Przedsiębiorców Polskich, członek zespołu ds. ubezpieczeń społecznych Rady Dialogu Społecznego.  
+        </p>
+        <h4>Natychmiastowa wykonalność</h4>
+        <p>
+          Ostatnia zmiana, która ma się znaleźć w nowym projekcie, dotyczy tzw. zapadalności decyzji. 
+          Resort pracy chce utrzymać zapis o tym, że decyzja administracyjna inspektora będzie podlegała natychmiastowemu wykonaniu, co oznacza, że od momentu jej wystawienia przedsiębiorca będzie musiał przekształcić kontrakt w etat i płacić wyższe daniny. 
+          - Chcemy, aby tzw. rygor natychmiastowej wykonalności mógł być uchylony przez głównego inspektora pracy, w sytuacji gdy taki rygor mógł wywoływać obiektywne trudności związane z pewnymi zobowiązaniami, które dana osoba na B2B już zawarła - mówi nam nasze źródło związane z rządem.
+          O co dokładnie może chodzić? Otóż główny inspektor pracy mógłby uznać, że natychmiastowy rygor przekształcenia kontraktu w etat może być trudny ze względu na "powstanie nieodwracalnych skutków działalności" u osoby na B2B. 
+          - Może chodzić np. o sytuację, że osoba mająca zarejestrowaną działalność wzięła w leasing jakiś sprzęt, samochód i jeszcze inne rzeczy. Gdyby natychmiast przeszła na etat, nie wiadomo, kto nadal miałby być stroną umowy leasingu i spłacać raty, bo umowa była zawarta z przedsiębiorcą, a nie pracownikiem na etacie – tłumaczy nasze źródło.  
+        </p>
+        <h4>Dodatkowe wpływy do budżetu</h4>
+        <p>
+          Ministerstwo Finansów szacuje, że ograniczenie umów B2B może przynieść budżetowi państwa ok. 210 mln zł dodatkowych wpływów. Wyliczenia te znalazły się w rządowym dokumencie przygotowanym na potrzeby procedury nadmiernego deficytu.
+          Ministerstwo Pracy uważa, że to mało realne, bo musiałaby nastąpić masowa kontrola wszystkich jednoosobowych firm współpracujących z jednym kontrahentem. A to obecnie niewykonalne. 
+          Nowe przepisy mają zacząć obowiązywać od stycznia 2026 r., a na Radzie Ministrów znaleźć się jeszcze w listopadzie. Potem ustawa trafi do Sejmu, Senatu i na biurko prezydenta.
+        </p>
       </div>
     </div>
   </div>
